--- a/properties/HoldEm.properties
+++ b/properties/HoldEm.properties
@@ -2,3 +2,10 @@
 2 = 3,Community
 3 = 1,Community
 4 = 1,Community
+
+action1 = dealingRound
+action2 = dealingRound
+action3 = dealingRound
+action4 = dealingRound
+
+
