--- a/properties/HoldEm.properties
+++ b/properties/HoldEm.properties
@@ -1,11 +1,10 @@
+type = Community
+maxRounds = 4
 1 = 2,Players
 2 = 3,Community
 3 = 1,Community
 4 = 1,Community
-
 action1 = dealingRound
 action2 = dealingRound
 action3 = dealingRound
 action4 = dealingRound
-
-
