added another exception

--- a/properties/HoldEm.properties
+++ b/properties/HoldEm.properties
@@ -9,7 +9,7 @@ visibility1 = 2,0
 visibility2 = 0,3
 visibility3 = 0,1
 visibility4 = 0,1
-action1 = dealingRound
+action1 = dealingRounds
 action2 = dealingRound
 action3 = dealingRound
 action4 = dealingRound
