--- a/properties/FiveCardDraw.properties
+++ b/properties/FiveCardDraw.properties
@@ -1,8 +1,8 @@
 playerListType = Standard
 maxRounds = 2
 maxExchangeCards = 3
-1 = 5,Players
-2 = 0,Players
+1 = Players
+2 = Players
 visibility1 = 5,0
 visibility2 = 0,0
 action1 = dealingRound
