--- a/properties/HoldEmDrawCombo.properties
+++ b/properties/HoldEmDrawCombo.properties
@@ -1,6 +1,6 @@
 playerListType = Standard
 maxRounds = 4
-maxExchangeCards = 0
+maxExchangeCards = 3
 1 = Players
 2 = Community
 3 = Community
@@ -11,5 +11,5 @@ visibility3 = 0,1
 visibility4 = 0,1
 action1 = dealingRound
 action2 = dealingRound
-action3 = dealingRound
+action3 = exchangeRound
 action4 = dealingRound
