--- a/properties/SevenCardStud.properties
+++ b/properties/SevenCardStud.properties
@@ -1,12 +1,12 @@
 playerListType = Stud
 maxRounds = 5
 maxExchangeCards = 0
-1 = 3,Players
-2 = 1,Players
-3 = 1,Players
-4 = 1,Players
-5 = 1,Players
-visibility1 = 2,1
+1 = Players
+2 = Players
+3 = Players
+4 = Players
+5 = Players
+visibility1 = 5,1
 visibility2 = 0,1
 visibility3 = 0,1
 visibility4 = 0,1
