--- a/properties/HoldEmDrawCombo.properties
+++ b/properties/HoldEmDrawCombo.properties
@@ -5,11 +5,11 @@ maxExchangeCards = 3
 2 = Community
 3 = Community
 4 = Community
-visibility1 = 0,0
+visibility1 = 3,0
 visibility2 = 0,3
 visibility3 = 0,1
 visibility4 = 0,1
-action1 = exchangeRound
+action1 = dealingRound
 action2 = dealingRound
 action3 = exchangeRound
 action4 = dealingRound
