experimented with css and display names and images

--- a/resources/cardSettings.json
+++ b/resources/cardSettings.json
@@ -1,6 +1,6 @@
 {
   "gameSettings": {
-    "cardBack" : "/card-back.png"
+    "cardBack" : "/duvall_card_back.png"
   },
   "suits": {
     "HEARTS": "/heart-suit.png",
